--- a/appmanifest.json
+++ b/appmanifest.json
@@ -1,28 +1,36 @@
-﻿{
-	"name": "New project",
-	"short_name": "New project",
+{
+	"name": "flappingBird",
+	"short_name": "flappingBird",
+	"description": "Assignment 3",
 	"start_url": "index.html",
-	"display": "standalone",
+	"display": "fullscreen",
 	"orientation": "any",
-	"icons": [{
-		"src": "icon-16.png",
-		"sizes": "16x16",
-		"type": "image/png"
-	}, {
-		"src": "icon-32.png",
-		"sizes": "32x32",
-		"type": "image/png"
-	}, {
-		"src": "icon-128.png",
-		"sizes": "128x128",
-		"type": "image/png"
-	}, {
-		"src": "icon-256.png",
-		"sizes": "144x144",
-		"type": "image/png"
-	}, {
-		"src": "icon-256.png",
-		"sizes": "256x256",
-		"type": "image/png"
-	}]
+	"background_color": "#ffffff",
+	"icons": [
+		{
+			"src": "icons/icon-16.png",
+			"sizes": "16x16",
+			"type": "image/png"
+		},
+		{
+			"src": "icons/icon-32.png",
+			"sizes": "32x32",
+			"type": "image/png"
+		},
+		{
+			"src": "icons/icon-114.png",
+			"sizes": "114x114",
+			"type": "image/png"
+		},
+		{
+			"src": "icons/icon-128.png",
+			"sizes": "128x128",
+			"type": "image/png"
+		},
+		{
+			"src": "icons/icon-256.png",
+			"sizes": "256x256",
+			"type": "image/png"
+		}
+	]
 }
